GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/Service_Request__c.object-meta.xml
<CustomObject>
    <label>Service Request</label>
    <nameField>
        <displayFormat>SR-{00000000}</displayFormat>
        <label>Service Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>