GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Account_Product__c.field-meta.xml
<CustomField>
    <fullName>Account_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Product</label>
    <referenceTo>Account_Product__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Account_Products</relationshipName>
    <type>Lookup</type>
</CustomField>