GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Account_Product_Followup_Retry__c.field-meta.xml
<CustomField>
    <fullName>Account_Product_Followup_Retry__c</fullName>
    <formula>Account_Product__r.Followup_Retry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Product Followup Retry</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>