GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Billing_Result_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Result_Type__c</fullName>
    <label>Billing Result Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>