GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <formula>Intake_Request__r.Contact.FirstName&amp;&quot; &quot;&amp; Intake_Request__r.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>