GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Current_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Date__c</fullName>
    <description>Today&apos;s date for document generation</description>
    <formula>today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Date</label>
    <type>Date</type>
</CustomField>