GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Document_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Delivery_Status__c</fullName>
    <label>Document Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>