GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Fax_Attempt_Count__c.field-meta.xml
<CustomField>
    <fullName>Fax_Attempt_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Number of Fax attempts</inlineHelpText>
    <label>Fax Attempt Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>