GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Fax_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Fax_Date_Time__c</fullName>
    <label>Fax Date Time</label>
    <type>DateTime</type>
</CustomField>