GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Fax_Failed_Count__c.field-meta.xml
<CustomField>
    <fullName>Fax_Failed_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fax Failed Count</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>