GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Follow_up_Retry_Attempts_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Retry_Attempts_Remaining__c</fullName>
    <formula>IF(NOT(ISPICKVAL( Status__c , &apos;Completed&apos;)),  Account_Product_Followup_Retry__c   -  Intake_Request__r.Followup_Count__c , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Follow-up Retry Attempts Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>