GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Followup_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Followup_Frequency__c</fullName>
    <formula>Account_Product__r.Followup_Frequency__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Followup Frequency</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>