GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Intake_Request__c.field-meta.xml
<CustomField>
    <fullName>Intake_Request__c</fullName>
    <label>Intake Request</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>