GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Next_Followup_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Next_Followup_Date_Time__c</fullName>
    <label>Next Follow Up Date Time</label>
    <type>DateTime</type>
</CustomField>