GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Provider_Contact__c.field-meta.xml
<CustomField>
    <fullName>Provider_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Provider Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Related_Contact__c.Contact_Type__c</field>
            <operation>equals</operation>
            <value>Facility</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Related_Contact__c</referenceTo>
    <relationshipLabel>Service Requests</relationshipLabel>
    <relationshipName>Service_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>