GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Reason_Code__c</fullName>
    <label>Reason Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Complete – All Records Received</fullName>
            </value>
            <value>
                <fullName>Complete - No Records Received</fullName>
            </value>
            <value>
                <fullName>Complete – Partial Records Received</fullName>
            </value>
            <value>
                <fullName>Terminate</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Complete Full</fullName>
                <isActive>false</isActive>
                <label>Complete Full</label>
            </value>
            <value>
                <fullName>Complete No Records</fullName>
                <isActive>false</isActive>
                <label>Complete No Records</label>
            </value>
            <value>
                <fullName>Complete Partial</fullName>
                <isActive>false</isActive>
                <label>Complete Partial</label>
            </value>
            <value>
                <fullName>Complete-Withdrawn</fullName>
                <isActive>false</isActive>
                <label>Complete-Withdrawn</label>
            </value>
            <value>
                <fullName>Complete-Withdrawn-Bill</fullName>
                <isActive>false</isActive>
                <label>Complete-Withdrawn-Bill</label>
            </value>
            <value>
                <fullName>Complete-Withdrawn-Full</fullName>
                <isActive>false</isActive>
                <label>Complete-Withdrawn-Full</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>