GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <label>Follow-up Retry Attempts Remaining</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>