GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Service_Time_Limit__c.field-meta.xml
<CustomField>
    <fullName>Service_Time_Limit__c</fullName>
    <formula>Account_Product__r.Service_Time_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Time Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>