GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>DocumentsSentOut</fullName>
                <label>Documents Sent Out</label>
            </value>
            <value>
                <fullName>Documents In Progress</fullName>
            </value>
            <value>
                <fullName>QA Complete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Complete Full</fullName>
                <isActive>false</isActive>
                <label>Complete Full</label>
            </value>
            <value>
                <fullName>Complete No Records Returned</fullName>
                <isActive>false</isActive>
                <label>Complete No Records Returned</label>
            </value>
            <value>
                <fullName>Complete Partial</fullName>
                <isActive>false</isActive>
                <label>Complete Partial</label>
            </value>
            <value>
                <fullName>Documents Sent</fullName>
                <isActive>false</isActive>
                <label>Documents Sent</label>
            </value>
            <value>
                <fullName>Late Cancel</fullName>
                <isActive>false</isActive>
                <label>Late Cancel</label>
            </value>
            <value>
                <fullName>SentToCase360</fullName>
                <isActive>false</isActive>
                <label>Sent To Case 360</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>