GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Intake_Request__c</columns>
    <columns>Reason_Code__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>