GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/listViews/Fax_Failed.listView-meta.xml
<ListView>
    <fullName>Fax_Failed</fullName>
    <columns>NAME</columns>
    <columns>Intake_Request__c</columns>
    <columns>Account_Product__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fax_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fax_Status__c</field>
        <operation>equals</operation>
        <value>Failed</value>
    </filters>
    <label>Fax Failed</label>
</ListView>