GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/listViews/Faxed_Awaiting_Confirmation.listView-meta.xml
<ListView>
    <fullName>Faxed_Awaiting_Confirmation</fullName>
    <columns>NAME</columns>
    <columns>Intake_Request__c</columns>
    <columns>Account_Product__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fax_Status__c</columns>
    <columns>Fax_Date_Time__c</columns>
    <columns>Status__c</columns>
    <columns>Document_Delivery_Status__c</columns>
    <columns>Recipient_Verification_Status__c</columns>
    <columns>Reason_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fax_Status__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>DocumentsSentOut</value>
    </filters>
    <label>Faxed &amp; Awaiting Confirmation</label>
</ListView>