GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/listViews/Queued_Service_Requests.listView-meta.xml
<ListView>
    <fullName>Queued_Service_Requests</fullName>
    <columns>NAME</columns>
    <columns>Intake_Request__c</columns>
    <columns>Account_Product__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fax_Status__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fax_Status__c</field>
        <operation>equals</operation>
        <value>Queued</value>
    </filters>
    <label>Queued Service Requests</label>
</ListView>