GloablServices/keshavglobal/force-app/main/default/objects/Service_Request__c/listViews/Ready_to_Fax_Cover_Sheet.listView-meta.xml
<ListView>
    <fullName>Ready_to_Fax_Cover_Sheet</fullName>
    <columns>NAME</columns>
    <columns>Intake_Request__c</columns>
    <columns>Account_Product__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Fax_Status__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Fax_Status__c</field>
        <operation>equals</operation>
        <value>Ready</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Ready to Fax Cover Sheet</label>
</ListView>